--- a/app/views/notifier/ticket.html.erb
+++ b/app/views/notifier/ticket.html.erb
@@ -6,11 +6,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	</head>
 	<body>
-		<table cellpadding="0" cellspacing="0" border="0" id="backgroundTable">
+		<table cellpadding="0" cellspacing="0" border="0" id="">
 			<tr>
 				<td>
-					<table width="600px" cellpadding="10" cellspacing="10" align="center" id="email-table">
+					<table width="600px" cellpadding="10" cellspacing="10" align="center" id="">
 						<tr>
+							<td><h3><%= @ticket.number %></h3></td>
 							<td><%= raw(@qr) %></td>
 						</tr>
 				</td>
