added back search functionality should be fuzzier

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -12,15 +12,18 @@
         </ul>
         <h3 class="muted">100 Motels</h3>
       </div>
-
       <hr>
-
+      <div class="row">
+        <div class="search offset1"><%= render 'search' %></div>
+      </div>
+      <div class="row">
       <div class="jumbotron">
         <h1>did you ever want to put on an event...<br>
           <small>but you weren't sure if it was worth it?</small>
         </h1> <br>
         <p class="lead">100 Motels lets you try out an event, tweak it, fix it or toss it without costing you a penny. <br><br> Click the big green button to see how it works.  </p>
         <%= link_to "Absolutely Free :)", guest_profiles_path, method: :post, class: 'btn btn-large btn-success' %>
+      </div>
       </div>
 
       <hr>
