--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -2,10 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-// All
-
-
-/* Home */
+// index
 .jumbotron {
   margin: 60px 0;
   text-align: center;
@@ -22,15 +19,6 @@
   line-height: 1;
 }
 
-.headlines  {
-  font-size: 16px;
-  line-height: 26px;
-  h2 {
-    text-align: center
-  }
-}
-// index
-
 .container-narrow {
 margin: 0 auto;
 max-width: 700px;
@@ -41,3 +29,6 @@ margin: 0 auto;
 max-width: 400px;
 }
 
+.search {
+  margin-top: 30px;
+}
