--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="row">
 		<div class="span12">
-			<header><h3 class="page-header">Upcoming Events</h3></header>
+			<header><h3 class="page-header">Upcoming Events</h3><span><%= render 'search' %></span></header>
 		</div>
 	</div>
 	<div class="row">
