added suspended state to event

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -18,7 +18,7 @@
       </div>
       <div class="row">
       <div class="jumbotron">
-        <h1>did you ever want to put on an event...<br>
+        <h1>Did you ever want to organize a Gig...<br>
           <small>but you weren't sure if it was worth it?</small>
         </h1> <br>
         <p class="lead">100 Motels lets you try out an event, tweak it, fix it or toss it without costing you a penny. <br><br> Click the big green button to see how it works.  </p>
