added event cancelled

--- a/app/views/notifier/event_cancelled.text.erb
+++ b/app/views/notifier/event_cancelled.text.erb
@@ -2,4 +2,6 @@ Hi <%= @order.email %>,
 
 Unfortunately your event has been cancelled.
 
+You will receive a full refund and a cancellation notice for any orders you made for this event.
+
 Sincere apologies.
