--- a/app/views/organizer/events/show.html.erb
+++ b/app/views/organizer/events/show.html.erb
@@ -21,7 +21,7 @@
       </a>
       <ul class="dropdown-menu">
         <li><%= link_to image_tag('blue.png'), '/auth/stripe_connect' unless current_user.api_key %></li>
-        <li><%= link_to "Charge All (inc.failed)" %></li>
+        <li><%= link_to "Charge All (inc.failed)", charge_all_orders_path(event_id: @event.id), method: :post %></li>
         <li><%= submit_tag "Charge Selected", name: 'charge', class: "link-button" if current_user.api_key %></li>
         <li><%= submit_tag "Refund Selected", name: 'refund', class: "link-button" if current_user.api_key %></li>
         <li><%= submit_tag "Cancel Selected", name: 'cancel', class: "link-button" if current_user.api_key %></li>
@@ -39,10 +39,10 @@
       <ul class="dropdown-menu">
         <li><%= link_to "View Event", event_path(@event) %></li>
         <li><%= link_to "New Event", new_organizer_event_path(@event) %></li>
-
+        <li><%= link_to "Edit Event", edit_organizer_event_path(@event) %></li>
         <li><%= link_to "Orders PDF", organizer_event_path(@event, format: "pdf") %></li>
         <li><%= link_to "Tickets PDF", organizer_event_tickets_path(@event, format: "pdf") %></li>
-        <li><%= link_to "Check-in", organizer_event_tickets_path(@event) %></li>
+        <li><%= link_to "Check-in View", organizer_event_tickets_path(@event) %></li>
       </ul>
     </div>
   </div> <!-- /button menu -->
@@ -64,7 +64,6 @@
 </ul>
   </div>
   <div class="span9">
-      <%= hidden_field_tag "organizer", current_user.id %>
       <table class="table table-striped table-bordered" id="organizer-customers">
         <thead>
           <tr>
