--- a/app/views/organizer/events/show.html.erb
+++ b/app/views/organizer/events/show.html.erb
@@ -1,6 +1,5 @@
-<div class="row">
+<div class="row-fluid">
   <div class="span2" id="button-menu">
-    <%= form_tag  charge_or_refund_orders_path, method: :post  do %>
       <div class="btn-group">
         <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
           <%= @event.artist %>
@@ -13,7 +12,9 @@
         </ul>
       </div>
   </div>
+  <div class="span4"><%= render 'search' %></div>
   <div class="span2">
+    <%= form_tag  charge_or_refund_orders_path, method: :post  do %>
     <div class="btn-group">
       <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
           Charge
@@ -30,7 +31,7 @@
       </ul>
     </div>
   </div>
-  <div class="span2 offset2">
+  <div class="span2">
     <div class="btn-group">
       <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
           Options
@@ -47,7 +48,7 @@
     </div>
   </div> <!-- /button menu -->
 </div> <!-- /row -->
-<div class="row">
+<div class="row-fluid">
   <aside class="span2">
     <ul class="nav nav-tabs nav-stacked">
       <li><a href="<%= organizer_event_path(@event) %>">All<span class="badge badge-info pull-right"><%= @event.orders.sum(:quantity) %></span></a></li>
@@ -58,13 +59,13 @@
       <li><a href="<%= request.path + '?refunded=true' %>">Cancelled<span class="badge pull-right"><%= @event.orders.cancelled.sum(:quantity) %></span></a></li>
     </ul>
   </aside>
-  <div class="span9">
+  <div class="span10">
     <ul class="inline">
   <li><h3>Funding: <%= number_to_currency(@event.orders.funding.sum(:quantity) * @event.ticket_price) %> <small>(inc. ordered, paid, net of fees)</small></h3></li>
   <li class="pull-right"><h3>Capacity: <%= @event.capacity %> <small> (<%= @event.capacity - @event.orders.funding.sum(:quantity) %> tickets remaining)</small></h3></li>
 </ul>
   </div>
-  <div class="span9">
+  <div class="span10">
       <table class="table table-striped table-bordered" id="organizer-customers">
         <thead>
           <tr>
@@ -95,4 +96,5 @@
       </table>
     <% end %>
   </div> <!-- /table form -->
+  <%= will_paginate @orders %>
 </div> <!-- /row -->
