--- a/app/views/organizer/events/_search.html.erb
+++ b/app/views/organizer/events/_search.html.erb
@@ -1,4 +1,4 @@
 <%= form_tag organizer_event_path(@event), method: :get, class: "navbar-search" do %>
-    <%= text_field_tag :query, params[:query], class: "search-query", placeholder: "Order or Ticket details", id: "appendedInputButton" %>
+    <%= text_field_tag :query, params[:query], class: "search-query", placeholder: "Order, Event or Ticket details", id: "appendedInputButton" %>
     <button type="submit" class="btn" style="margin:0;"><i class="icon-search"></i>Search</button>
 <% end %>
