added sticky footer

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,5 +1,6 @@
 @import "jquery-ui-1.9.2.custom";
 @import "bootstrap_and_overrides";
+@import "bootstrap";
 @import "bootstrap-responsive";
 @import "layout";
 @import "pages";
