--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,5 +1,5 @@
-@import "bootstrap";
+// This stylesheet is for configuring bootstrap variables only
 
-
+// $btnSuccessBackground: invert( #0064cd);
 
 
