--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -1,3 +1,6 @@
+//event show
+// make sure video iframs are responsive
+
 .flex-video {
   position: relative;
   padding-top: 25px;
@@ -30,3 +33,33 @@
 .event-ticket-orders  {
   text-align: center;
 }
+
+// org/event/show charge buttons
+// were being styled automagically as buttons
+
+.link-button {
+  text-decoration: none;
+  border: none;
+  background-color: transparent;
+  display: block;
+  padding: 3px 20px;
+  clear: both;
+  font-weight: normal;
+  line-height: 20px;
+  color: #333333;
+  white-space: nowrap;
+
+  &:hover,
+  &:focus {
+    color: #ffffff;
+    background-color: #0081c2;
+    background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
+    background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
+    background-image: -o-linear-gradient(top, #0088cc, #0077b3);
+    background-image: linear-gradient(to bottom, #0088cc, #0077b3);
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0);
+  }
+}
+
