--- a/app/views/application/_search.html.erb
+++ b/app/views/application/_search.html.erb
@@ -1,4 +1,6 @@
-<%= form_tag events_path, method: :get, class: "navbar-search " do %>
-    <%= text_field_tag :query, params[:query], class: "span4 search-query", placeholder: "Search Anything!", id: "appendedInputButton" %>
-    <button type="submit" class="btn" style="margin:0;"><i class="icon-search"></i>Search</button>
+<%= form_tag events_path, method: :get do %>
+  <div class="input-append">
+    <%= text_field_tag :query, params[:query], class: "input-block-level big-search", placeholder: "Search Anything!", id: "appendedInputButton" %>
+    <button type="submit" class="btn" style="margin:0;"><i class="icon-search"></i>Go!</button>
+  </div>
 <% end %>
