--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <![endif-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
-  <body>
+  <body id="<%= params[:controller].parameterize %>_controller">
     <div class="navbar">
       <div class="navbar-inner">
         <div class="container">
