--- a/app/views/application/_search.html.erb
+++ b/app/views/application/_search.html.erb
@@ -1,6 +1,6 @@
 <%= form_tag events_path, method: :get do %>
   <div class="input-append">
     <%= text_field_tag :query, params[:query], class: "input-block-level big-search", placeholder: "Search Anything!", id: "appendedInputButton" %>
-    <button type="submit" class="btn" style="margin:0;"><i class="icon-search"></i>Go!</button>
+    <button type="submit" class="btn" ><i class="icon-search"></i>Go!</button>
   </div>
 <% end %>
