--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -12,19 +12,23 @@
 			</div> <!-- /row -->
 		</nav>
 		<section id="event-information" class="event">
+			</div>
 			<div class="row-fluid">
 				<div class="span4 event-poster">
+					<hr>
+					<h2>
+						<small><%= @organizer.name || "no name" %> presents</small><br>
+						<%= @event.title %>
+					</h2>
+					<hr>
 					<p><%= @event.image %></p>
 					<%= @event.filepicker %>
 				</div>
+				<hr>
 				<div class="span4 event-details">
-					<h1><%= @event.title %></h1>
-					<hr>
 					<dl class="">
 						<dt>Featuring:</dt>
 						<dd>The Crete Boom, The Porn Trauma and more!</dd>
-						<dt>Organized by:</dt>
-						<dd><%= @organizer.name || "no name" %></dd>
 						<dt>Date</dt>
 						<dd><%= @event.date %></dd>
 						<dt>Venue</dt>
@@ -46,7 +50,7 @@
 		<hr>
 		<section id="event-media" class="event">
 			<div class="row">
-				<div class="span4"><p><%= @event.about %></p></div>
+				<div class="span4 about-event"><%= @event.about %></div>
 				<div class="span6"><%= @event.video %><div class="flex-video"><%= @event.video_iframe %></div></div>
 			<div class="row">
 				<div class="span4"><%= @event.location %></div>
