--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,35 +12,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body id="<%= params[:controller].parameterize %>_controller">
-    <div class="navbar">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <%= link_to "100 Motels", root_path, class: "brand" %>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li><%= link_to "Events", events_path %></li>
-              <li><%= link_to "Info", info_path %></li>
-            </ul>
-            <ul class="nav pull-right">
-              <% unless current_user %>
-                <li><%= link_to "Sign up", signup_path %></li>
-                <li><%= link_to "Sign in", login_path %></li>
-              <% end %>
-              <li class="divider-vertical"></li>
-              <% if current_user %>
-                <%= render "current_user_menu" %>
-              <% end %>
-            </ul>
-          </div><!-- /.nav-collapse -->
-        </div> <!-- container -->
-      </div><!-- /navbar-inner -->
-    </div>  <!-- /navbar -->
-    <div id="wrap">
+    <div class="wrapper">
+      <div class="navbar">
+        <div class="navbar-inner">
+          <div class="container">
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </a>
+            <%= link_to "100 Motels", root_path, class: "brand" %>
+            <div class="nav-collapse collapse">
+              <ul class="nav">
+                <li><%= link_to "Events", events_path %></li>
+                <li><%= link_to "Info", info_path %></li>
+              </ul>
+              <ul class="nav pull-right">
+                <% unless current_user %>
+                  <li><%= link_to "Sign up", signup_path %></li>
+                  <li><%= link_to "Sign in", login_path %></li>
+                <% end %>
+                <li class="divider-vertical"></li>
+                <% if current_user %>
+                  <%= render "current_user_menu" %>
+                <% end %>
+              </ul>
+            </div><!-- /.nav-collapse -->
+          </div> <!-- container -->
+        </div><!-- /navbar-inner -->
+      </div>  <!-- /navbar -->
       <div class="container" id="main">
         <% flash.each do |key, value| %>
           <div class="alert alert-<%= key == :notice ? "success" : "error" %>">
@@ -50,12 +50,17 @@
         <% end %>
         <%= yield %>
       </div> <!-- /content container -->
-      <div id="push"></div>
+      <div class="push"></div>
     </div> <!-- /wrap -->
-    <div id="footer">
+    <footer>
       <div class="container">
-        <a href="//github.com/seocahill">&copy; Seo Cahill 2012</a>
+        <ul class="inline">
+          <li>© 100 Motels 2013</li>
+          <li><%= link_to "Terms of Service" %></li>
+          <li><%= link_to "Legal and Privacy" %></li>
+          <li><%= link_to "Info and Help" %></li>
+        </ul>
       </div>
-    </div>
+    </footer>
   </body>
 </html>
