backstretch background working nice now but potential caching problems down the line

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@
     <footer>
       <div class="container">
         <ul class="inline">
-          <li>© 100 Motels 2013</li>
+          <li>© 100 Motels Ltd 2013</li>
           <li><%= link_to "Terms of Service" %></li>
           <li><%= link_to "Legal and Privacy" %></li>
           <li><%= link_to "Info and Help" %></li>
