--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -1,6 +1,8 @@
 //event show
 // make sure video iframs are responsive
 
+// @import "event-image";
+
 .flex-video {
   position: relative;
   padding-top: 25px;
@@ -65,5 +67,9 @@
     background-repeat: repeat-x;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0);
   }
+}
+
+.event-header  {
+  background-image: url(image_path('tex2res5.png'));
 }
 
