--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,30 +2,31 @@
 	<% @event.header %>
 	<div class="container">
 		<nav id="organizer-tools", class="event">
-			<div class="row">
+			<div class="row-fluid">
 				<div class="span2">
 					<%= @event.toggle_visible %>
 				</div>
 				<div class="span2">
 					<%= @event.edit %>
 				</div>
+			<div class="span2">
+					<%= @event.filepicker %>
+				</div>
 			</div> <!-- /row -->
 		</nav>
 		<section id="event-information" class="event">
-			</div>
-			<div class="row-fluid">
-				<div class="span4 event-poster">
+			<div class="row-fluid event-header">
+				<div class="span12">
 					<hr>
 					<h2>
 						<small><%= @organizer.name || "no name" %> presents</small><br>
 						<%= @event.title %>
 					</h2>
 					<hr>
-					<p><%= @event.image %></p>
-					<%= @event.filepicker %>
 				</div>
-				<hr>
-				<div class="span4 event-details">
+			</div>
+			<div class="row-fluid">
+				<div class="span6 event-poster" data-url="<%= @event.image %>">
 					<dl class="">
 						<dt>Featuring:</dt>
 						<dd>The Crete Boom, The Porn Trauma and more!</dd>
@@ -36,24 +37,22 @@
 						<dt>Begins</dt>
 						<dd><%= @event.doors %></dd>
 					</dl>
-					<hr>
 				</div>
-				<div class="span4 event-ticket-orders">
+				<div class="span6 event-ticket-orders">
 					<h1><%= @event.sales %><small> left to target</small></h1>
 					<h3><%= @event.price %><small> each</small></h3>
 					<%= @event.ticket_form %>
-					<hr>
 					<h3><%= @event.order_total %> </h3>
 				</div>
 			</div>
 		</section>
 		<hr>
 		<section id="event-media" class="event">
-			<div class="row">
-				<div class="span4 about-event"><%= @event.about %></div>
-				<div class="span6"><%= @event.video %><div class="flex-video"><%= @event.video_iframe %></div></div>
-			<div class="row">
-				<div class="span4"><%= @event.location %></div>
+			<div class="row-fluid">
+				<div class="span6"><div class="about-event"><%= @event.about %></div></div>
+				<div class="span6 pagination-centered"><%= @event.video %><div class="flex-video"><%= @event.video_iframe %></div></div>
+			<div class="row-fluid pagination-centered">
+				<div class="span6"><%= @event.location %></div>
 				<div class="span6"><%= @event.music %><%= @event.music_iframe %></div>
 			</div>
 		</section>
