--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -23,17 +23,17 @@
 					<h2>
 						<small><%= @organizer.name || "no name" %> presents</small><br>
 						<%= @event.title %><br>
-						<small><%= @event.date %></small>
+						<small>
+							<%= @event.date %> | <i class="icon-shopping-cart"></i> <i class="icon-map-marker"></i>
+							<i class="icon-headphones"></i> <i class="icon-info-sign"></i>
+						</small>
 					</h2>
 					<hr>
 				</div>
 			</div>
 			<div class="row-fluid">
 				<div class="span6 event-poster" data-url="<%= @event.image %>">
-					<h3>
-						<small>Featuring:</small>
-						The Crete Boom, The Porn Trauma and more!
-					</h3>
+					<h3><small>Featuring:</small> The Crete Boom, The Porn Trauma and more!</h3>
 					<h3><small>We need </small><%= @event.sales %><small> more patrons to pay for this show please help!</small></h3>
 				</div>
 				<div class="span6 event-ticket-orders">
