--- a/app/views/application/_current_user_menu.html.erb
+++ b/app/views/application/_current_user_menu.html.erb
@@ -1,5 +1,5 @@
 <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %> <i class="icon-user"></i></b></a>
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %> <i class="icon-cog"></i></b></a>
   <ul class="dropdown-menu">
     <li><%= link_to "Save your Account", signup_path if current_user.guest? %></li>
     <li><%= link_to "User Account", user_path(current_user) unless current_user.guest? %></li>
