--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -79,3 +79,12 @@
     text-shadow: 3px 4px 5px #000;
   }
 }
+
+#events_controller {
+  .thumbnails li {
+    @include media-between($small-min, $small-max) {
+      width: 49%;
+      float: left;
+    }
+  }
+}
