--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="row-fluid">
 		<div class="span6"><%= render 'search' %></div>
-		<div class="span5 offset1 big-search">
+		<div class="span2 offset1 pull-right">
 			<div class="btn-group">
         <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
           Filter by Date
